# multimodel-eipl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cc  network.cc
src/include/: cuda_utils.h  logger.h  network.h  timer.h
test/: test_network.cc
